// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Side Drawer Has different height when in mobile 1`] = `
.c1 {
  background-color: #FFFFFF;
  box-shadow: 0 6px 10px 0 transparent;
  height: calc(100vh - 56px);
  right: 0;
  overflow-x: hidden;
  overflow-y: auto;
  position: fixed;
  top: 56px;
  -webkit-transform: translate(0%);
  -ms-transform: translate(0%);
  transform: translate(0%);
  -webkit-transition: -webkit-transform 300ms;
  -webkit-transition: transform 300ms;
  transition: transform 300ms;
  width: 50%;
  z-index: 100;
}

.c0 > .c0 {
  height: 100%;
  top: 0;
}

<div
  aria-hidden="false"
  class="c0 c1"
  open=""
  origin="right"
  width="50%"
>
  <p>
    Test
  </p>
</div>
`;

exports[`Side Drawer Has nested drawer 1`] = `
.c1 {
  background-color: #FFFFFF;
  box-shadow: 0 6px 10px 0 transparent;
  height: calc(100vh - 48px);
  left: 0;
  overflow-x: hidden;
  overflow-y: auto;
  position: fixed;
  top: 48px;
  -webkit-transform: translate(0%);
  -ms-transform: translate(0%);
  transform: translate(0%);
  -webkit-transition: -webkit-transform 300ms;
  -webkit-transition: transform 300ms;
  transition: transform 300ms;
  width: 100%;
  z-index: 100;
}

.c0 > .c0 {
  height: 100%;
  top: 0;
}

.c2 {
  background-color: #FFFFFF;
  box-shadow: 0 6px 10px 0 transparent;
  height: calc(100vh - 48px);
  right: 0;
  overflow-x: hidden;
  overflow-y: auto;
  position: fixed;
  top: 48px;
  -webkit-transform: translate(0%);
  -ms-transform: translate(0%);
  transform: translate(0%);
  -webkit-transition: -webkit-transform 300ms;
  -webkit-transition: transform 300ms;
  transition: transform 300ms;
  width: 100%;
  z-index: 100;
}

.c0 > .c0 {
  height: 100%;
  top: 0;
}

<div
  aria-hidden="false"
  class="c0 c1"
  open=""
  origin="left"
  width="100%"
>
  <div
    aria-hidden="false"
    class="c0 c2"
    open=""
    origin="right"
    width="100%"
  >
    <p>
      Test
    </p>
  </div>
</div>
`;

exports[`Side Drawer Has width set to 50% 1`] = `
.c1 {
  background-color: #FFFFFF;
  box-shadow: 0 6px 10px 0 transparent;
  height: calc(100vh - 48px);
  right: 0;
  overflow-x: hidden;
  overflow-y: auto;
  position: fixed;
  top: 48px;
  -webkit-transform: translate(0%);
  -ms-transform: translate(0%);
  transform: translate(0%);
  -webkit-transition: -webkit-transform 300ms;
  -webkit-transition: transform 300ms;
  transition: transform 300ms;
  width: 50%;
  z-index: 100;
}

.c0 > .c0 {
  height: 100%;
  top: 0;
}

<div
  aria-hidden="false"
  class="c0 c1"
  open=""
  origin="right"
  width="50%"
>
  <p>
    Test
  </p>
</div>
`;

exports[`Side Drawer Is closed on left side 1`] = `
.c1 {
  background-color: #FFFFFF;
  box-shadow: 0 6px 10px 0 transparent;
  height: calc(100vh - 48px);
  left: 0;
  overflow-x: hidden;
  overflow-y: auto;
  position: fixed;
  top: 48px;
  -webkit-transform: translate(-100%);
  -ms-transform: translate(-100%);
  transform: translate(-100%);
  -webkit-transition: -webkit-transform 300ms;
  -webkit-transition: transform 300ms;
  transition: transform 300ms;
  width: 100%;
  z-index: 100;
}

.c0 > .c0 {
  height: 100%;
  top: 0;
}

<div
  aria-hidden="true"
  class="c0 c1"
  origin="left"
  width="100%"
>
  <p>
    Test
  </p>
</div>
`;

exports[`Side Drawer Is closed on right side 1`] = `
.c1 {
  background-color: #FFFFFF;
  box-shadow: 0 6px 10px 0 transparent;
  height: calc(100vh - 48px);
  right: 0;
  overflow-x: hidden;
  overflow-y: auto;
  position: fixed;
  top: 48px;
  -webkit-transform: translate(100%);
  -ms-transform: translate(100%);
  transform: translate(100%);
  -webkit-transition: -webkit-transform 300ms;
  -webkit-transition: transform 300ms;
  transition: transform 300ms;
  width: 100%;
  z-index: 100;
}

.c0 > .c0 {
  height: 100%;
  top: 0;
}

<div
  aria-hidden="true"
  class="c0 c1"
  origin="right"
  width="100%"
>
  <p>
    Test
  </p>
</div>
`;

exports[`Side Drawer Is open 1`] = `
.c1 {
  background-color: #FFFFFF;
  box-shadow: 0 6px 10px 0 transparent;
  height: calc(100vh - 48px);
  right: 0;
  overflow-x: hidden;
  overflow-y: auto;
  position: fixed;
  top: 48px;
  -webkit-transform: translate(0%);
  -ms-transform: translate(0%);
  transform: translate(0%);
  -webkit-transition: -webkit-transform 300ms;
  -webkit-transition: transform 300ms;
  transition: transform 300ms;
  width: 100%;
  z-index: 100;
}

.c0 > .c0 {
  height: 100%;
  top: 0;
}

<div
  aria-hidden="false"
  class="c0 c1"
  open=""
  origin="right"
  width="100%"
>
  <p>
    Test
  </p>
</div>
`;
